# data-pipeline-agent

./: .gitignore  README.md  claude_executor.py  executor.py  main.py  planner.py  pyproject.toml  report.py  requirements.txt
data/: customers.csv
